RESOLVED FIXED 266259
[WebGPU] Overrides with duplicate @id(values) are not rejected
https://bugs.webkit.org/show_bug.cgi?id=266259
Summary [WebGPU] Overrides with duplicate @id(values) are not rejected
Mike Wyrzykowski
Reported 2023-12-11 15:17:35 PST
[WebGPU] Overrides with duplicate @id(values) are not rejected
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-11 15:19:19 PST
Mike Wyrzykowski
Comment 2 2023-12-11 15:24:54 PST
EWS
Comment 3 2023-12-12 16:03:51 PST
Committed 271956@main (8db4245f77a3): <https://commits.webkit.org/271956@main> Reviewed commits have been landed. Closing PR #21658 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.