[WebGPU] Overrides with duplicate @id(values) are not rejected https://bugs.webkit.org/show_bug.cgi?id=266259 radar://119520604

Reviewed by Dan Glastonbury.

The integer value inside of @id(...) must be unique.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/shader_module/overrides-expected.txt:
* Source/WebGPU/WGSL/AttributeValidator.cpp:
(WGSL::AttributeValidator::visit):
* Source/WebGPU/WGSL/WGSLShaderModule.h:
(WGSL::ShaderModule::containsOverride const):
(WGSL::ShaderModule::addOverride):

Canonical link: https://commits.webkit.org/271956@main