Source/WebGPU/WGSL/WGSLShaderModule.h
@@ -33,6 +33,7 @@
 #include "WGSL.h"
 #include "WGSLEnums.h"
 
+#include <wtf/HashSet.h>
 #include <wtf/OptionSet.h>
 #include <wtf/text/StringHash.h>
 #include <wtf/text/WTFString.h>
@@ -220,6 +221,14 @@ public:
 
     OptionSet<Extension>& enabledExtensions() { return m_enabledExtensions; }
     OptionSet<LanguageFeature> requiredFeatures() { return m_requiredFeatures; }
+    bool containsOverride(uint32_t idValue) const
+    {
+        return m_pipelineOverrideIds.contains(idValue);
+    }
+    void addOverride(uint32_t idValue)
+    {
+        m_pipelineOverrideIds.add(idValue);
+    }
 
 private:
     String m_source;
@@ -239,6 +248,7 @@ private:
     TypeStore m_types;
     AST::Builder m_astBuilder;
     Vector<std::function<void()>> m_replacements;
+    HashSet<uint32_t, DefaultHash<uint32_t>, WTF::UnsignedWithZeroKeyHashTraits<uint32_t>> m_pipelineOverrideIds;
 };
 
 } // namespace WGSL
